# genai-usecase-generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
data/raw/: 1,302real-worldgenAI.txt  101genAIusecaseswithtechnicalblueprints.txt  1302_llm_extractions.json  blueprint_image_extractions.json  precedents_depth_scores.json
docs/: _briefing_before_v9_4_analysis.md  architecture.md  changelog.md  data_sources.md  deploy.md  explainer.md  limits.md  methodology.md  prompts.md  publish_le_chat.md
docs/_reference/: mistral_8bit_compass_v2.html
docs/benchmarks/: carrefour_n12_standard.md  carrefour_n12_standard_grounding.md  carrefour_n12_standard_trace.md  carrefour_n5_standard.md  carrefour_n5_standard_grounding.md  carrefour_n5_standard_trace.md  carrefour_n8_fast.md  carrefour_n8_fast_grounding.md  carrefour_n8_fast_trace.md  carrefour_n8_max.md  carrefour_n8_max_grounding.md  carrefour_n8_max_trace.md  carrefour_n8_parallel_enrich.md  carrefour_n8_parallel_enrich_grounding.md  carrefour_n8_parallel_enrich_trace.md  carrefour_n8_single_pass_score.md  carrefour_n8_single_pass_score_grounding.md  carrefour_n8_single_pass_score_trace.md  carrefour_n8_standard.md  carrefour_n8_standard_grounding.md  carrefour_n8_standard_trace.md  findings.md
docs/examples/: bnp_paribas.md  carrefour.md  loreal_trace.md  veolia_trace.md
scripts/: _fetch.py  _normalize.py  build_1302.py  build_blueprints.py  build_data.py  build_depth_scores.py  build_embeddings.py  build_evidently.py  build_gcloud.py  build_wikidata.py  run_example.py  run_heavy_batch.py  run_v9_5_test.py  run_v9_6_test.py  run_v9_7_test.py  run_v9_8_test.py  run_v9_9_test.py  run_worker.py  screenshot_fe.py
src/: _clients.py  _rate_limits.py  _util.py  api.py  cache.py  config.py  criteria.py  db.py  evidence.py  models.py  pipeline.py  precedents.py  prompts.py  quality_signals.py  trace.py  web_verify.py  workflow.py
src/activities/: alt_actions.py  compute_signals.py  entity_resolution.py  final_qualify.py  generate.py  meta_evaluate.py  refine_use_case.py  render_report.py  research.py  retrieve.py  score.py  select_enrich.py  source_judge.py  web_verify.py  (+1 more)
standalone/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
tests/: test_criteria.py  test_models.py  test_quality_signals.py
(+271 files in other folders)
