[project]
name = "genai-usecase-generator"
version = "0.1.0"
description = "Mistral Workflows pipeline that generates 3 relevant, iconic, high-impact GenAI use cases for a target company"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ali Dor" }]

dependencies = [
    # Mistral Workflows SDK + Mistral plugin (chat completion activity, Le Chat output, UI components)
    "mistralai-workflows[mistralai]>=0.5",
    # Mistral async LLM client (used directly inside activities for embeddings + structured outputs)
    "mistralai>=1.5",
    # API surface for the standalone web app
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Validation + config
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Async HTTP for Wikipedia, Tavily, deep-read fetches, careers pages
    "httpx>=0.27",
    # Fuzzy matching for the verified-companies index
    "rapidfuzz>=3.10",
    # Fast HTML parsing for deep-read content extraction
    "selectolax>=0.3.21",
    # JS-heavy career page fallback (uses CDP — Lightpanda binary installed separately)
    "playwright>=1.48",
    # Async SQLite for the data layer (companies, precedents, cache)
    "aiosqlite>=0.20",
    # In-memory cosine similarity over precedent embeddings
    "numpy>=2.1",
    # Tavily search client (news + per-candidate verification)
    "tavily-python>=0.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pyright>=1.1.385",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ASYNC", # async-specific lints
]
ignore = ["E501"] # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests", "scripts"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false  # Mistral SDK has incomplete stubs in places

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
